[fix] disabled items contrast issue; ref opsiweb-ui#371

--- a/static/themes/opsi-dark.css
+++ b/static/themes/opsi-dark.css
@@ -1,6 +1,6 @@
 :root {
   --log-secondary: #dce4ef;
-  --log-muted: #ffffffb4;
+  --log-muted: #e7e4e4b4;
   --color:#ffffffb4;
   --background:#40464e;
   --border: var(--background);
@@ -2676,7 +2676,8 @@ input[type="submit"].btn-block {
 }
 .dropdown-item.disabled,
 .dropdown-item:disabled {
-  color: #dcdfe7;
+  /* color: #dcdfe7; */
+  color: var(--log-muted);
   pointer-events: none;
   background-color: transparent;
 }
